--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/HQSY/HQSY_HCZL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/HQSY/HQSY_HCZL.css
@@ -23,3 +23,8 @@
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_third .ul_row_right_jcpp_third .li_row_right_jcpp_third{cursor: pointer;padding-left: 5px;width: 100%;height: 25px;display: block;overflow: hidden;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_third .ul_row_right_jcpp_third .li_row_right_jcpp_third:hover{ background-color: #000000;opacity: 0.7;color: #ffffff;}
 .div_row_right .div_row_right_jcpp .div_row_right_jcpp_item .p_row_right_jcpp{ padding: 5px 10px;color: #bc6ba6;width: 100%;height: 40px;display: block;}
+
+.div_gcys {width: 70px;height: 35px;border: 2px solid #cccccc;display: inline-block;padding: 5px 6px;border-radius: 4px;position: relative;margin-right: 10px;}
+.div_gcys:hover {background-color: #ececec;cursor: pointer;}
+.span_gcys_left {width: 18px;height: 18px;display: inline-block;border: 1px solid #cccccc;}
+.span_gcys_right {display: inline-block;left: 34px;bottom: 10px;position: absolute;font-size: 14px;}
