--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/JYPX/JYPX_GLPX.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/HTFB/JYPX/JYPX_GLPX.css
@@ -1,16 +1,1 @@
-﻿.ulFWPZ img {
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-    border: none !important;
-    margin-right: 5px;
-}
-
-.ulFWPZ li {
-    display: inline-block;
-    width: 150px;
-    height: 30px;
-    text-align: left;
-    margin-top: 4px;
-    cursor: pointer;
-}
+﻿
