--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_KSDH_YYPJKD.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_KSDH_YYPJKD.css
@@ -14,7 +14,7 @@
 }
 
 .span_head_main_logo {
-    background-image: url(../images/logo_blue.png);
+    background-image: url(../images/logo_purple.png);
     background-repeat: no-repeat;
     width: 155px;
     height: 55px;
