--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/YHDL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/YHDL.css
@@ -1,13 +1,15 @@
-﻿.div_head {width: 100%;height: 80px;display: block;padding-left: 80px;}
-.div_head .span_head_main_logo {background-image: url(../images/logo_blue.png);background-repeat: no-repeat;width: 155px;height: 55px;display: inline-block;margin-top: 10px;float: left;}
+﻿body {width: 100%;height: 100%;overflow-x: hidden;background-color: #ffffff;}
 
-.em_head_split {height: 1px;width: 100%;display: block;margin-top: 10px;background-color: #ad5b97;}
+.div_head {width: 1200px;height: 80px;display: block;padding-left: 80px;overflow-x:hidden;}
+.div_head .span_head_main_logo {background-image: url(../images/logo_purple.png);background-repeat: no-repeat;width: 165px;height: 55px;display: inline-block;margin-top: 10px;float: left;}
 
-.div_body {width: 100%;display: block;text-align: center;background-image: url(../images/yhdlxx_background.jpg);padding-top: 45px;}
+.em_head_split {height: 0.5px;width: 1200px;display: block;margin-top: 10px;background-color: #ad5b97;}
+
+.div_body {width: 1200px;display: block;text-align: center;background-image: url(../images/yhdlxx_background.jpg);padding-top: 45px;background-size:100%;}
 .div_body .div_body_yhdl {width: 460px;height: 420px;margin: 0 auto;background-color: #fff;border-radius: 4px;padding: 0 25px;box-shadow: 0px 0px 8px #888;}
 .div_body .div_body_yhdl .Info {font-size: 12px;width: 100%;height:20px;padding:0 10px !important;}
 
-.div_bottom {border-top: 1px solid #cccccc;display: block;text-align: center;height: 100px;color: #333;padding-top: 15px;font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;bottom: 0;width: 100%;position: absolute;background-color: #000;opacity: 0.5;color: #fff;line-height: 34px;}
+.div_bottom {width:1200px;border-top: 1px solid #ad5b97;display: block;text-align: center;height: 100px;color: #333;padding-top: 15px;font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;background-color: #000;opacity: 0.7;color: #fff;line-height: 34px;}
 .div_bottom .div_bottom_inner .span_div_bottom_inner {font-size: 14px;font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", tahoma, arial, simhei;}
 .div_bottom .div_bottom_inner .span_div_bottom_inner:hover {cursor: pointer;text-decoration: underline;}
 .div_bottom .div_bottom_inner .em_div_bottom_inner {width: 1px;background-color: #fff;height: 9px;margin: 2px 5px 0px 5px;display: inline-block;}
