--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/YHZC.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Other/YHZC.css
@@ -5,7 +5,7 @@
 
 .em_head_split {height: 0.5px;width: 1200px;display: block;margin-top: 10px;background-color: #ad5b97;}
 
-.div_body {width: 1200px;display: block;text-align: center;background-image: url(../images/yhdlxx_background.jpg);padding-top: 45px;background-size:100%;}
+.div_body {width: 1200px;height: 500px;display:block;text-align: center;background-image: url(../images/yhdlxx_background.jpg);padding-top: 45px;background-size:100%;}
 .div_body .div_body_yhzc {width: 460px;height: 420px;margin: 0 auto;background-color: #fff;border-radius: 4px;padding: 0 25px;box-shadow: 0px 0px 8px #888;}
 
 .div_bottom {width:1200px;border-top: 1px solid #ad5b97;display: block;text-align: center;height: 100px;color: #333;padding-top: 15px;font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;background-color: #000;opacity: 0.7;color: #fff;line-height: 34px;}
