--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDL/YHDL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDL/YHDL.cshtml
@@ -46,9 +46,10 @@
                         </tr>
                         <tr>
                             <td style="text-align: left">
-                                <input id="checkMMSFZDDL" type="checkbox" />
-                                <span class="spanZDDD">下次自动登录</span>
-                                <a id="aWJMM">忘记密码</a>
+                                @*<input id="checkMMSFZDDL" type="checkbox" />
+                                <span class="spanZDDD">下次自动登录</span>*@
+                                <a class="spanWJMM" id="aWJMM">忘记密码?</a>
+                                <a class="spanYHZC" id="aYHZC1">还未注册?</a>
                             </td>
                         </tr>
                         <tr>
@@ -75,8 +76,9 @@
                         </tr>
                         <tr>
                             <td style="text-align: left">
-                                <input id="checkSJSFZDDL" type="checkbox" />
-                                <span class="spanZDDD">下次自动登录</span>
+                                @*<input id="checkSJSFZDDL" type="checkbox" />
+                                <span class="spanZDDD">下次自动登录</span>*@
+                                <span class="spanYHZC" id="aYHZC2">还未注册?</span>
                             </td>
                         </tr>
                         <tr>
