--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDL/YHDL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDL/YHDL.cshtml
@@ -46,10 +46,11 @@
                         </tr>
                         <tr>
                             <td style="text-align: left">
-                                @*<input id="checkMMSFZDDL" type="checkbox" />
-                                <span class="spanZDDD">下次自动登录</span>*@
-                                <a class="spanWJMM" id="aWJMM">忘记密码?</a>
-                                <a class="spanYHZC" id="aYHZC1">还未注册?</a>
+                                <input id="checkMMSFZDDL" type="checkbox" />
+                                <span class="spanZDDD">下次自动登录</span>
+                                <a class="spanWJMM" id="aWJMM">忘记密码</a>
+                                <a class="spanSplit">|</a>
+                                <a class="spanYHZC" id="aYHZC1">用户注册</a>
                             </td>
                         </tr>
                         <tr>
@@ -76,9 +77,9 @@
                         </tr>
                         <tr>
                             <td style="text-align: left">
-                                @*<input id="checkSJSFZDDL" type="checkbox" />
-                                <span class="spanZDDD">下次自动登录</span>*@
-                                <span class="spanYHZC" id="aYHZC2">还未注册?</span>
+                                <input id="checkSJSFZDDL" type="checkbox" />
+                                <span class="spanZDDD">下次自动登录</span>
+                                <a class="spanYHZC" id="aYHZC2">用户注册</a>
                             </td>
                         </tr>
                         <tr>
