--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HTGL/HTGL.cshtml
@@ -1,16 +1,15 @@
 ﻿@{
     Layout = "~/Areas/Business/Views/Shared/QT.cshtml";
 }
-<!DOCTYPE html>
-<html>
-<head>
+@section Section_Head {
     <link href="@Url.Content("~/Areas/Business/Css/HTGL/HTGL.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css" )" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/HTGL/HTGL.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
-</head>
-<body style="width: 100%; height: 100%; overflow-x:hidden; background-color: #eeeff1;">
+}
+@section Section_Body {
+<body>
     <div id="divTop" class="div_top">
         <div class="div_top_left">
             <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
@@ -291,4 +290,4 @@
         </div>
     </div>
 </body>
-</html>
+}
